--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -18,7 +18,7 @@
           <div class="col-md-12">
             <h3><%= current_user.username %></h3>
             <div class="designation">
-              <i class="fas fa-briefcase"></i>
+              <span><i class="fas fa-briefcase"></i></span>
               <%= f.text_field :position, placeholder: t("cv.position"), class: "form-control" %>
               <%= errors_for f, :address %>
             </div>
