--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -30,6 +30,11 @@
             <i class="fas fa-users"></i> <%= t "admin.apply.manage" %>
           <% end %>
         </li>
+         <li class="nav-item">
+          <%= link_to admin_profiles_path, class: "nav-link" do %>
+            <i class="fas fa-search"></i> <%= t "find_candidate" %>
+          <% end %>
+        </li>
         <li class="nav-item">
           <%= link_to destroy_user_session_path, method: :delete, class: "nav-link" do %>
             <i class="fas fa-sign-out-alt"></i> <%= t "user.logout" %>
