--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -13,7 +13,7 @@
         <div class="card-header">
           <h3 class="card-title"><%= t "admin.post.list_all_job" %></h3>
           <%= link_to new_admin_post_path, class: "btn btn-primary btn-sm float-right" do %>
-            <%= t "admin.post.post" %>
+            <i class="fas fa-plus"></i>
           <% end %>
         </div>
         <div class="card-body">
